# openclaw-agentcore-crew

./: .envrc  .gitignore  Dockerfile.agentcore  INFRA-HANDOFF.md  Justfile  README.md  agentcore_start.py  app.py  cdk.context.json  cdk.json  devbox.json  pyproject.toml  requirements.txt  server.py
.github/workflows/: cdk-deploy.yml  ci.yml
.kiro/specs/: voice-and-image-support.md
docs/: DEPLOYMENT.md  NEW-ACCOUNT.md
lambda/cron/: index.py
lambda/router/: .gitignore  index.py
lambda/token_processor/: index.py
scripts/: cli.py  deploy.sh  manage-allowlist.sh  setup-discord.sh  setup-slack.sh  setup-telegram.sh  setup-whatsapp.sh  teardown.sh
stacks/: __init__.py  agentcore_stack.py  cicd_stack.py  cron_stack.py  guardrails_stack.py  observability_stack.py  router_stack.py  security_stack.py  token_monitoring_stack.py  vpc_stack.py  vpc_stack_endpoints.py
